<resources>
    <string name="app_name">EzShop</string>
    <string name="ezshop">EzShop</string>
    <string name="add_item">Adicionar item</string>
    <string name="search">Pesquisar</string>
    <string name="new_list">Nova Lista</string>
    <string name="register_new_article">Registar novo artigo</string>
    <string name="article_not_found">Artigo não encontrado? Adicionar manualmente</string>
    <string name="email_or_password_wrong">Email ou palavra-passe erradas</string>
    <string name="email_already_registered">Email já registado</string>
    <string name="user_prefs">userprefs</string>
    <string name="saved_token">token</string>
    <string name="add_product">Adicionar produto</string>
    <string name="edit_product">Editar produto</string>
    <string name="update_product">Atualizar produto</string>
    <string name="delete_list">Apagar lista?</string>
    <string name="delete_list_warning">A lista não poderá ser recuperada.</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="edit_list">Editar lista</string>
    <string name="fill_field">Preencha o campo</string>
    <string name="fill_password">Mínimo de 8 caracteres</string>
    <string name="invalid_quantity">Quantidade inválida</string>
    <string name="between2and50">"Entre 2 a 50 caracteres "</string>
    <string name="invalid_email">Email inválido</string>
    <string name="remove_image">Remover imagem?</string>
    <string name="remove_image_warning">A imagem não poderá ser recuperada.</string>
    <string name="share">Partilhar</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="save">Guardar</string>
    <string name="send">Enviar</string>
    <string name="error">Ocorreu um erro.</string>
    <string name="list_shared">Lista partilhada com %s</string>
    <string name="email_not_registered">Email não registado</string>
    <string name="list_already_shared_with">Lista já partilhada com %s</string>
    <string name="password">Palavra-passe</string>
    <string name="create_account">Criar conta</string>
    <string name="registration">Registo</string>
    <string name="login">Entrar</string>
    <string name="forgot_password">Esqueceu a palavra-passe?</string>
</resources>