<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        app:cardBackgroundColor="@color/darker_grey"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textAppearance="@style/greenTitleLightStyle"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@id/name_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />


            <EditText
                android:id="@+id/name_register"
                style="@style/textInputStyleLoginRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="100"
                android:paddingHorizontal="8dp"
                android:singleLine="true"
                app:drawableStartCompat="@drawable/ic_baseline_person_24"
                app:layout_constraintBottom_toTopOf="@id/email_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_register" />

            <EditText
                android:id="@+id/email_register"
                style="@style/textInputStyleLoginRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="254"
                android:paddingHorizontal="8dp"
                android:singleLine="true"
                app:drawableStartCompat="@drawable/ic_baseline_email_24"
                app:layout_constraintBottom_toTopOf="@id/password_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_register" />

            <EditText
                android:id="@+id/password_register"
                style="@style/textInputStyleLoginRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="100"
                android:paddingHorizontal="8dp"
                android:singleLine="true"
                app:drawableStartCompat="@drawable/ic_baseline_vpn_key_24"
                app:layout_constraintBottom_toTopOf="@id/btn_enter_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_register" />

            <Button
                android:id="@+id/btn_enter_register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/acumin_pro_semicondensed"
                android:padding="12dp"
                android:text="@string/create_account"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/login_btn"
        style="@style/textLoginRegisterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>