<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/darker_grey"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/create_account_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAppearance="@style/greenTitleLightStyle"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toTopOf="@id/email_login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/email_login"
                style="@style/textInputStyleLoginRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginVertical="10dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="254"
                android:paddingHorizontal="8dp"
                android:singleLine="true"
                app:drawableStartCompat="@drawable/ic_baseline_email_24"
                app:layout_constraintBottom_toTopOf="@id/password_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_login"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/password_login"
                style="@style/textInputStyleLoginRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="45dp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:maxLength="100"
                android:paddingHorizontal="8dp"
                android:singleLine="true"
                app:drawableStartCompat="@drawable/ic_baseline_vpn_key_24"
                app:layout_constraintBottom_toTopOf="@id/forgot_pass_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_login" />

            <Button
                android:id="@+id/forgot_pass_login"
                style="@style/forgotPasswordTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/btn_enter_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_login" />


            <Button
                android:id="@+id/btn_enter_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/acumin_pro_semicondensed"
                android:padding="12dp"
                android:text="@string/login"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/create_account_login"
        style="@style/textLoginRegisterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:includeFontPadding="false"
        android:text="@string/create_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_card" />


</androidx.constraintlayout.widget.ConstraintLayout>