<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="25dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/knob_cv"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3"
        card_view:cardBackgroundColor="@color/light_medium_grey"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="0dp"
        card_view:layout_constraintBottom_toTopOf="@id/new_list_title_tv" />

    <TextView
        android:id="@+id/new_list_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:includeFontPadding="false"
        android:text="@string/share"
        android:textAlignment="center"
        android:textAppearance="@style/greenTitleLightStyle"
        app:layout_constraintBottom_toTopOf="@id/share_email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/knob_cv" />

    <EditText
        android:id="@+id/share_email_et"
        style="@style/textInputStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="254"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/users_shared_rv_nsv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_list_title_tv" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/users_shared_rv_nsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toTopOf="@id/share_list_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_email_et">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/users_shared_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="45dp" />
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/share_list_btn"
        style="@style/saveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/users_shared_rv_nsv" />

</androidx.constraintlayout.widget.ConstraintLayout>