<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/knob_cv"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/light_medium_grey"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/search_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />


    <TextView
        android:id="@+id/search_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:includeFontPadding="false"
        android:text="@string/search"
        android:textAlignment="center"
        android:textAppearance="@style/greenTitleLightStyle"
        app:layout_constraintBottom_toTopOf="@id/item_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/knob_cv" />

    <EditText
        android:id="@+id/item_name_et"
        style="@style/textInputStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="8dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="100"
        android:paddingHorizontal="8dp"
        android:singleLine="true"
        app:drawableEndCompat="@drawable/ic_baseline_camera_enhance_24"
        app:drawableStartCompat="@drawable/ic_icon_search"
        app:layout_constraintBottom_toTopOf="@id/results_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_title_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginVertical="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/new_product_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_product_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/medium_grey"
        android:drawableEnd="@drawable/ic_arrow_circle"
        android:elevation="0dp"
        android:paddingVertical="6dp"
        android:text="@string/register_new_article"
        android:textAppearance="@style/newProductButtonStyle"
        android:textColor="@color/green"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/results_rv" />
</androidx.constraintlayout.widget.ConstraintLayout>